<resources>
    <string name="app_name">ifitness-dmos5</string>

    <!-- Tela Cadastro de usuário -->
    <string name="singUp_name">Nome</string>
    <string name="singUp_sexo">Sexo</string>
    <string name="singUp_data">Data de nascimento</string>
    <string name="singUp_telefone">Telefone</string>
    <string name="singUp_email">Email</string>
    <string name="singUp_senha">Senha</string>
    <string name="singUp_button_cadastrar">Cadastrar</string>

    <!-- Tela Principal -->
    <string name="toogle_open">Open</string>
    <string name="toogle_close">Close</string>
    <string name="enter">Entrar</string>

    <array name="genders">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </array>

    <array name="activitys">
        <item>Caminhada</item>
        <item>Ciclismo</item>
        <item>Corrida</item>
        <item>Natação</item>
    </array>

</resources>